# BK-WhisperX

./: .gitattributes  .gitignore  BK-WhisperX.bat  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  bk-whisperx.sh  bk_whisperx.py  bkwhisperx.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: app.manifest  version_info.txt
bkwhisperx/: __init__.py  bootstrap.py  cli.py  config.py  console.py  diagnostics.py  engine.py  hardware.py  paths.py  process_control.py  runner.py  runtime-requirements.txt  updates.py
installer/: BKWhisperX.iss
scripts/: build_windows.ps1
tests/: test_bootstrap.py  test_cli_paths.py  test_config.py  test_console_rtl.py  test_diagnostics.py  test_language.py  test_live_preview.py  test_outputs.py  test_paths.py  test_process_control.py  test_runner_privacy.py  test_updates.py
