[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bk-whisperx"
version = "1.1.0"
description = "Production-ready local WhisperX transcription with CLI and managed runtime."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ben Khodabandeh" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["whisperx", "transcription", "subtitles", "speech-to-text", "persian", "cuda", "cli"]
dependencies = [
  "arabic-reshaper==3.0.1",
  "python-bidi==0.6.11",
]

[project.scripts]
bk-whisperx = "bkwhisperx.cli:main"

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "pyinstaller==6.15.0",
  "pytest==8.4.1",
  "ruff==0.12.12",
]

[tool.setuptools.packages.find]
include = ["bkwhisperx*"]

[tool.setuptools.package-data]
bkwhisperx = ["runtime-requirements.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]